ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - host: ansible-awx.virtualizandoaju.com.br
  rules:
    - host: ansible-awx.virtualizandoaju.com.br
      http:
        paths:
          - backend:
              service:
                name: awx-service
                port: 80
            path: /
            pathType: Prefix



...
